# server.js
@@ -11,7 +11,9 @@ const studentRoutes = require('./routes/studentRoutes');
 const authRoutes = require('./routes/authRoutes');
 const teacherRoutes = require('./routes/teacherRoutes');
 const classRoutes = require('./routes/classRoutes');
-
+const subjectRoutes = require('./routes/subjectRoutes');
+const attendanceRoutes = require('./routes/attendanceRoutes');
+const feesRoutes = require('./routes/feesRoutes');
 dotenv.config();
 
 const app = express();
@@ -46,7 +48,9 @@ app.use('/api/students', studentRoutes);
 app.use('/api/auth', authRoutes);
 app.use('/api/teachers', teacherRoutes);
 app.use('/api/classes', classRoutes);
-
+app.use('/api/subjects',subjectRoutes);
+app.use('/api/attendance',attendanceRoutes);
+app.use('/api/fees',feesRoutes);
 // MongoDB Connection
 const connectDB = async () => {
   try {
